# FOOL

./: CMakeLists.txt  globals.c  globals.h  main.c
entity/: Entity.c  Entity.h
entity/base/: ball.c  ball.h  base.c  base.h
shader/: background.fsh  terrain.fsh
util/math/: mathutil.c  mathutil.h
util/random/: randomutil.c  randomutil.h
util/terrain/: terrainutil.c  terrainutil.h
